# espresso_frame_gazebo

./: README.md
espresso_frame_gazebo_launch/: CMakeLists.txt  package.xml
espresso_frame_gazebo_launch/config/: front_laser_filter.yaml
espresso_frame_gazebo_launch/launch/: gazebo.launch.py  main.launch.py  simple.launch.py
espresso_frame_gazebo_launch/models/EspressoFrameHead/: model.config  model.sdf
espresso_frame_gazebo_launch/models/EspressoFrameMain/: model.config  model.sdf
espresso_frame_gazebo_launch/models/EspressoFrameMove/: model.config  model.sdf
espresso_frame_gazebo_launch/models/EspressoFrameTower/: model.config  model.sdf
espresso_frame_gazebo_launch/urdf/: all.urdf
espresso_frame_gazebo_launch/worlds/: cafe.world
espresso_frame_gazebo_plugins/: CMakeLists.txt  package.xml
espresso_frame_gazebo_plugins/src/: feetech_turret_plugin.cpp  mavros_move_plugin.cpp
espresso_frame_simple_simulator/: package.xml  setup.cfg  setup.py
espresso_frame_simple_simulator/espresso_frame_simple_simulator/: dummy_move.py  dummy_turret.py  mavros_move.py
